--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@reduxjs/toolkit": "^2.8.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "mongoose": "^8.17.2",
     "next": "15.4.7",
     "qrcode.react": "^4.2.0",
@@ -19,8 +22,12 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
