--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@reduxjs/toolkit": "^2.8.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
-    "mongoose": "^8.17.2",
+    "leaflet-routing-machine": "^3.2.12",
+    "mongoose": "^8.18.0",
     "next": "15.4.7",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
     "tailwindcss": "^4"
