--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev src/app",
+    "build": "next build src/app",
+    "start": "next start src/app",
+    "lint": "next lint src/app"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
