--- a/vercel.json
+++ b/vercel.json
@@ -6,13 +6,12 @@
       "use": "@vercel/next"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/app/$1"
-    }
-  ],
   "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "outputDirectory": ".next",
-  "installCommand": "npm install"
+  "functions": {
+    "pages/api/**/*.js": {
+      "maxDuration": 30
+    }
+  }
 }
