Solve import issues.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:debug": "next build --debug"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "lint": "next lint"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
