--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,13 @@
       "use": "@vercel/next"
     }
   ],
-  "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "outputDirectory": ".next",
-  "functions": {
-    "pages/api/**/*.js": {
-      "maxDuration": 30
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/app/$1"
     }
-  }
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install"
 }
